@@ -1,5 +1,5 @@
 /*
- * Copyright 2003 - 2017 The eFaps Team
+ * Copyright 2003 - 2019 The eFaps Team
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -106,7 +106,7 @@ public abstract class AbstractCache<T extends CacheObjectInterface>
      */
     public T get(final long _id)
     {
-        return getCache4Id() == null ? null : getCache4Id().get(new Long(_id));
+        return getCache4Id() == null ? null : getCache4Id().get(Long.valueOf(_id));
     }
 
     /**
@@ -181,9 +181,9 @@ public abstract class AbstractCache<T extends CacheObjectInterface>
      */
     public boolean hasEntries()
     {
-        return (getCache4Id() != null && !getCache4Id().isEmpty())
-            || (getCache4Name() != null && !getCache4Name().isEmpty())
-            || (getCache4UUID() != null && !getCache4UUID().isEmpty());
+        return getCache4Id() != null && !getCache4Id().isEmpty()
+            || getCache4Name() != null && !getCache4Name().isEmpty()
+            || getCache4UUID() != null && !getCache4UUID().isEmpty();
     }
 
     /**
